--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "code.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "styles": "lessc styles.less styles.css"
+    "styles": "lessc styles.less distribution/styles.css",
+    "bundle": "webpack",
+    "copyindex": "cp index.html distribution/index.html",
+    "build": "npm run bundle && npm run styles && npm run copyindex"    
   },
   "repository": {
     "type": "git",
@@ -18,9 +21,10 @@
   },
   "homepage": "https://github.com/Hasseoa/MovieReviewExercise#readme",
   "devDependencies": {
-    "less": "^2.7.3"
+    "less": "^2.7.3",
+    "webpack": "^3.8.1"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
-
 }
-
-
