--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "styles": "lessc styles.less distribution/styles.css",
     "bundle": "webpack",
-    "copyindex": "cp index.html distribution/index.html",
-    "build": "npm run bundle && npm run styles && npm run copyindex"    
+    "copyindex": "cp template.html distribution/index.html",
+    "build": "npm run bundle && npm run styles && npm run copyindex",
+    "lintless": "stylelint styles.less",
+    "lintjs": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,9 @@
   },
   "homepage": "https://github.com/Hasseoa/MovieReviewExercise#readme",
   "devDependencies": {
+    "eslint": "^4.12.0",
     "less": "^2.7.3",
+    "stylelint": "^8.3.1",
     "webpack": "^3.8.1"
   },
   "dependencies": {
