--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,4 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm run lintless
-      - run: npm run lintjs
+      - run: npm run lintts
