--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
-    "angular": "^1.6.7",
-    "jquery": "^3.2.1"
+    "angular": "^1.6.7"    
   }
 }
